FIX title and buttons alignments

--- a/src/components/album-card/albums.css
+++ b/src/components/album-card/albums.css
@@ -15,11 +15,11 @@
   color: rgb(255, 255, 255);
   font-family: spotifyFont;
   padding: 5px;
-  margin-left: 20px;
+  margin-left: 30px;
   font-size: x-large;
 }
 .navigation {
-  margin-right: 20px;
+  margin-right: 40px;
   gap: 5px;
   display: flex;
   align-items: center;
@@ -42,10 +42,10 @@
 }
 
 .album-container {
-  width: 640px;
+  width: 620px;
   margin: auto;
   padding: 20px;
-  gap: 5px;
+  row-gap: 5px;
   background-color: rgba(255, 255, 255, 0.028);
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
